# AetherXOS

./: .gitignore  Cargo.toml  README.md  boot.s  build.rs  kernel.x  linker.ld  rust-toolchain.toml
.cargo/: config.toml
.config/: nextest.toml
aop_macros/: Cargo.toml
build_cfg/: cfg_emitter.rs  config_loader.rs  config_types.rs  emitter.rs  feature_graph.rs  linked_probe_codegen.rs  mod.rs  runtime_codegen.rs
config/: aethercore.commands.cjson  aethercore.defaults.cjson  hc_error_playbook.cjson  hypercore.defaults.cjson  hypercore.policy.cjson  hypercore.tasks.cjson  perf_thresholds.json  quick.actions.cjson
dashboard/: app-smoke.e2e.ts  package.json  vite.config.ts
examples/: kernel_config_probe.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: kernel_config_bytes.rs
host_rust_tests/: Cargo.toml
host_tools/scheduler_host_tests/: Cargo.toml
host_tools/scheduler_host_tests/tests/: scheduler_runtime.rs
kernel/: linker.ld
scripts/: ab_boot_recovery_gate.py  ab_boot_slots.py  ab_nightly_slot_flip.py  agent-contract.ps1  analyze_glibc_needs.py  archive_nightly_artifacts.ps1  bootstrap_and_boot_with_flutter.sh  build-os.ps1  build_boot_image.py  build_boot_image_initramfs.py  build_boot_image_platform.py  build_boot_image_userspace.py  core_pressure_report.py  crash_artifacts_report.py  crash_recovery_pipeline.py  create-dashboard.ps1  create-iso.ps1  dashboard_agent.ps1  dashboard_ui_server.ps1  driver_config_smoke.py  ensure_iso_tools.ps1  full-check.ps1  go-live.ps1  hypercore.ps1  install-deno.ps1  install_deb_into_rootfs.sh  libnet_feature_bench.py  limine_layout.py  linux_abi_errno_conformance.py  linux_abi_gap_inventory.py  linux_abi_gate.py  linux_abi_readiness_score.py  (+42 more)
shared/: Cargo.toml
shared/src/: bits.rs  flags.rs  identifiers.rs  lib.rs  macros.rs  prelude.rs  result.rs  target_arch.rs  telemetry.rs  units.rs
xagent/: Cargo.toml
xagent/src/: actions.rs  auth.rs  config.rs  cors.rs  main.rs  models.rs  resp.rs  state.rs
xagent/src/dto/: events.rs
xagent/src/routes/: auth_routes.rs  catalog.rs  compliance.rs  config_mgmt.rs  confirm.rs  dispatch.rs  health.rs  hosts.rs  launcher.rs  plugins.rs  policy_routes.rs  roadmap.rs  run_routes.rs  scheduler.rs
xagent/src/routes/ops/: events.rs
xagent/src/routes/ops/jobs/: handlers.rs  query.rs  stream.rs
xagent/src/tests/: e2e_flow.rs  events.rs  jobs.rs  mod.rs  plugins.rs  stress.rs  support.rs  unit_models.rs
xtask/: Cargo.toml  distro-registry.json
xtask/scripts/: bootstrap_flutter.sh
xtask/src/: cli.rs  config.rs  constants.rs  main.rs  types.rs
xtask/src/builders/: mod.rs  qemu.rs  secureboot.rs
xtask/src/cli/: build.rs  dashboard.rs  glibc.rs  linux.rs  release.rs  run.rs  runtime.rs  secureboot.rs  setup.rs  test.rs
xtask/src/commands/: dashboard.rs  mod.rs
xtask/src/commands/infra/: apt_binary_seed.rs  build.rs  flutter_engine_seed.rs  initramfs.rs  installer_policy.rs  installer_profile.rs  iso.rs  limine.rs  mod.rs  secureboot.rs  setup.rs  userspace_seed.rs  userspace_seed_script.sh
xtask/src/commands/infra/installer_profile/: mod.rs  tests.rs
xtask/src/commands/infra/iso/: iso_paths.rs  mod.rs  tools.rs  utils.rs
xtask/src/commands/infra/setup/: audit.rs  distro_check.rs  download.rs  mod.rs  platform.rs  provision.rs
xtask/src/commands/ops/: archive.rs  clean.rs  guest.rs  info.rs  mod.rs  qemu.rs  run.rs  soak.rs
xtask/src/commands/ops/qemu/: mod.rs  runner.rs  smoke.rs
xtask/src/commands/ops/run/: guest.rs  mod.rs
xtask/src/commands/release/: mod.rs  preflight.rs  status.rs
xtask/src/commands/release/preflight/: abi.rs  ci.rs  docs_audit.rs  evidence_bundle.rs  gates.rs  host_tools.rs  models.rs  reports.rs  repro_compare.rs
xtask/src/commands/release/preflight/diagnostics/: doctor.rs  mod.rs  policy_guard.rs  release.rs  seed_reports.rs  warning_audit.rs
xtask/src/commands/release/reporting/: abi_perf.rs  gates.rs  metrics.rs  mod.rs
xtask/src/commands/release/reporting/gates/: explain_failure.rs  explain_failure_tests.rs  gate_report.rs  gate_report_tests.rs  mod.rs  release_notes.rs  release_notes_tests.rs  support_diagnostics.rs  support_diagnostics_tests.rs
xtask/src/commands/release/reporting/metrics/: helpers.rs  helpers_tests.rs  mod.rs  perf_report.rs  render_tests.rs  score_normalize.rs  trend_dashboard.rs
xtask/src/commands/release/status/: scorecard.rs
xtask/src/commands/runtime/: ab_slot.rs  core_pressure.rs  crash_recovery.rs  mod.rs
xtask/src/commands/validation/: glibc.rs  linux_abi.rs  mod.rs  secureboot.rs  syscall_coverage.rs
xtask/src/commands/validation/glibc/: format.rs  inventory.rs  mod.rs
xtask/src/commands/validation/linux_abi/: desktop_plan.rs  desktop_stack_audit.rs  drift.rs  errno.rs  gap.rs  gate.rs  glibc.rs  mod.rs  p2_gap.rs  platform.rs  readiness.rs  utils.rs
xtask/src/commands/validation/reports/: glibc.rs  linux_abi.rs  mod.rs  readme_badge.rs
xtask/src/commands/validation/reports/linux_abi/: helpers.rs  mod.rs  semantic_matrix.rs  trend_dashboard.rs  workload_catalog.rs
xtask/src/commands/validation/secureboot/: models.rs  mok.rs  ovmf.rs  pcr.rs  sbat.rs  sign.rs
xtask/src/commands/validation/test/: driver.rs  host.rs  kernel_refactor_audit.rs  linux_app_compat.rs  mod.rs  posix.rs  tier.rs
xtask/src/commands/validation/test/linux_app_compat/: constants.rs  helpers.rs  mod.rs  models.rs  probe_output.rs  probe_output_tests.rs  probes.rs  profile.rs  reporting.rs  scoring.rs
xtask/src/commands/validation/test/tier/: tests.rs
xtask/src/utils/: cargo.rs  context.rs  logging.rs  mod.rs  parser.rs  paths.rs  process.rs  report.rs
xtask/src/utils/core/: config.rs  context.rs  mod.rs
xtask/src/utils/fs/: core.rs  hash.rs  mod.rs  paths.rs  registry.rs
xtask/src/utils/net/: mod.rs
xtask/src/utils/sys/: cargo.rs  executable.rs  mod.rs  process.rs  wsl.rs
xtask/src/utils/ui/: help.rs  logging.rs  mod.rs  orchestrator.rs  prompts.rs
xtask/src/utils/validation/: elf.rs  mod.rs  preflight.rs
xtask/tests/fixtures/: secureboot_ovmf_dry_run_summary.json  soak_dry_run_summary.json
(+2126 files in other folders)
