[package]
name = "aethercore-fuzz"
version = "0.0.1"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
aethercore = { path = "..", package = "aether-x-os" }

[[bin]]
name = "kernel_config_bytes"
path = "fuzz_targets/kernel_config_bytes.rs"
test = false
doc = false

[workspace]
