[package]
name = "hypercore-agent"
version = "0.0.1"
edition = "2024"
description = "Aether X OS dashboard agent — Rocket-based HTTP API replacing the PowerShell agent"

[features]
default = []
stress-tests = []

[dependencies]
rocket = { version = "0.5", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
hex = "0.4"
once_cell = "1"
tokio-stream = "0.1"

[dev-dependencies]
rocket = { version = "0.5", features = ["json"] }
