[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
flate2 = "1.0"
sha2 = "0.10"
regex = "1.10"
walkdir = "2.4"
glob = "0.3"
