[package]
name = "xtask"
version = "0.0.1"
edition = "2024"
publish = false
description = "Aether X OS unified build, image, test and run pipeline"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = "0.4"
flate2 = "1.0"
sha2 = "0.10"
sha3 = "0.10"
md-5 = "0.10"
sha-1 = "0.10"
blake2 = "0.10"
blake3 = "1.5"
regex = "1.10"
walkdir = "2.4"
glob = "0.3"
aethercore-common = { path = "../shared", features = ["clap"] }
tempfile = "3.5"
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"] }
inquire = "0.7"
indicatif = "0.17"
colored = "2.0"
lazy_static = "1.4"
strum = { version = "0.26", features = ["derive"] }
derive_more = { version = "0.99", features = ["display", "from", "as_ref"] }
bitflags = "2.4.0"
xmas-elf = "0.9"
tar = "0.4"
