[package]
name = "scheduler_host_tests"
version = "0.1.0"
edition = "2021"

[dependencies]
hypercore = { path = "../..", default-features = true, features = [
    "sched_round_robin",
    "sched_weighted_round_robin",
    "sched_fifo",
    "sched_lifo",
    "sched_cooperative",
    "sched_lottery",
    "sched_mlfq",
    "sched_edf",
] }
