[package]
name = "scheduler_host_tests"
version = "0.0.1"
edition = "2024"

[dependencies]
aethercore = { path = "../..", package = "aether-x-os", default-features = true, features = [
    "sched_round_robin",
    "sched_weighted_round_robin",
    "sched_fifo",
    "sched_lifo",
    "sched_cooperative",
    "sched_lottery",
    "sched_mlfq",
    "sched_edf",
] }
